用户管理进行上传图片 API

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,8 @@
             <%- include('widgets/input')%>
 
             <!-- 微博列表 -->
-            <% if (blogData.isEmpty) { %>
+            <!-- <% if (blogData.isEmpty) { %> -->
+            <% if (true) { %>
                 <div>
                     <center>暂无数据</center>
                 </div>
