--- a/src/views/setting.ejs
+++ b/src/views/setting.ejs
@@ -9,13 +9,13 @@
                 <div class="form-group row">
                     <label for="input-nick" class="col-sm-2 col-form-label">昵称</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="input-nick" placeholder="请输入昵称" value="<%= nickName%>">
+                        <input type="text" class="form-control" id="input-nick" placeholder="请输入昵称">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="input-city" class="col-sm-2 col-form-label">城市</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="input-city" placeholder="请输入城市" value="<%= city%>">
+                        <input type="text" class="form-control" id="input-city" placeholder="请输入城市" value="<%= city %>">
                     </div>
                 </div>
                 <div class="form-group row">
